# simulator

./: .dsbox_storage.json  .gitignore  .gitlab-ci.yml  .gitmodules  .luarc.json  Cargo.toml  Readme.md  build_release.sh
.cargo/: config.toml
.forgejo/workflows/: release-test.yaml  release.yaml
.github/workflows/: publish.yml
dsbox/: Cargo.toml
dsbox-core/: Cargo.toml
dsbox-core/src/: capabilities.rs  command.rs  lib.rs  network.rs  protocol.rs  timestamp.rs
dsbox-core/src/core/: builder.rs  error.rs  event.rs  mod.rs  monitor.rs  network.rs  node.rs  node_list.rs  node_manager.rs  remote_control.rs  timer_manager.rs  timestamp_source.rs  version.rs
dsbox-core/src/process/: command.rs  event.rs  io_helper.rs  lua.rs  mod.rs  native.rs  wasm.rs
dsbox-core/src/process/launcher/: io_helper.rs  lua.rs  mod.rs  native.rs  wasm.rs
dsbox-core/src/process/runner/: callback.rs  handle.rs  io_helper.rs  manager.rs  mod.rs  native.rs  wasm.rs
dsbox-core/src/process/runner/lua/: appdata.rs  dsbox_module.rs  mod.rs
dsbox-runners/io-helper/: Cargo.toml
dsbox-runners/io-helper/src/: lib.rs  lines_helper.rs
dsbox-runners/lua/: Cargo.toml
dsbox-runners/lua/src/: appdata.rs  dsbox_module.rs  lib.rs  windows.rs
dsbox-runners/native/: Cargo.toml
dsbox-runners/native/src/: lib.rs
dsbox-runners/wasm/: Cargo.toml
dsbox-runners/wasm/src/: lib.rs
dsbox-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
dsbox-tauri/icons/: icon.icns
dsbox-tauri/src/: args.rs  cli.rs  dsbox.rs  lib.rs  main.rs  util.rs
dsbox-tauri/src/dsbox/: interpreters.rs  mod.rs  remote_control.rs  util.rs
dsbox/src/: cli.rs  log_color.rs  main.rs  network.rs  protocol.rs  timestamp.rs
dsbox/src/core/: error.rs  event.rs  mod.rs  monitor.rs  node.rs  node_list.rs  process_manager.rs  remote_control.rs  timer_manager.rs
dsbox/src/process/: command.rs  event.rs  handle.rs  io_helper.rs  lua.rs  mod.rs  native.rs  wasm.rs
dsbox/src/webapp/: app.rs  files.rs  mod.rs
dsbox/src/webapp/app/: mod.rs  poll_optional.rs  rpc_util.rs
dsbox/src/webapp/json_rpc/: dispatcher.rs  macros.rs  mod.rs  request.rs  response.rs
json_rpc_fn/: Cargo.toml
json_rpc_fn/src/: lib.rs
libproto/: Cargo.toml
libproto/src/: echo.rs  init.rs  lib.rs  middleware.rs  payload.rs  services.rs  system.rs
libproto/src/system/: control.rs  event.rs  mod.rs
lua/: echo_client.lua  netsim_test.lua
lua/chandy-lamport/: chandy.lua  client.lua  message_queue.lua  server.lua
lua/echo/: client.lua  middleware.lua  proxy.lua  server.lua
lua/primary-based-remote-write/: client.lua  server.lua
nodes/: echo_server.py
nodes/echo_client/: Cargo.toml
nodes/echo_client/src/: main.rs
nodes/echo_server/: Cargo.toml
nodes/echo_server/src/: main.rs
nodes/netsim_test/: Cargo.toml
nodes/netsim_test/src/: main.rs
payload_derive/: Cargo.toml
payload_derive/src/: lib.rs
python/: echo_server.py
python/pynode/: __init__.py
webapp/: README.md  angular.json  build.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
webapp-angular/: angular.json
webapp-angular/src/app/: app.component.html  app.component.ts
webapp-angular/src/app/debug-controls/: debug-controls.component.html
webapp-angular/src/app/event-table/: event-table.component.ts
webapp-angular/src/app/graph/: graph.component.html  graph.component.ts
webapp-angular/src/app/models/: CoreSocket.ts  Event.ts  EventStore.ts  Message.ts  State.ts  Timestamp.ts
webapp-react/: index.html  package-lock.json  package.json  tsconfig.json
webapp-react/ts/: app.tsx  colors.ts  json.tsx  lamportDiagram.tsx  logView.tsx  main.tsx  popover.tsx  toolbar.tsx
webapp-react/ts/api/: api.ts  types.ts
webapp-react/ts/rpc/: rpc.ts  rpcResponse.d.ts
webapp-react/ts/store/: store.ts
webapp/css/: style.css
webapp/js/: app.js  app.js.map
webapp/src/: index.html  styles.css  styles.scss
webapp/src/app/: app.component.html  app.component.scss  app.component.ts  configurationStore.ts  event-pipe.pipe.spec.ts  notification.service.ts
webapp/src/app/debug-controls/: debug-controls.component.html  debug-controls.component.spec.ts  debug-controls.component.ts
webapp/src/app/event-table/: event-table.component.html  event-table.component.ts  event.pipe.ts  json-highlight.pipe.ts
webapp/src/app/graph/: graph.component.css  graph.component.html  graph.component.scss  graph.component.ts
webapp/src/app/graph-in-transit/: graph-in-transit.component.html  graph-in-transit.component.scss  graph-in-transit.component.spec.ts  graph-in-transit.component.ts
webapp/src/app/graph-legend/: graph-legend.component.html  graph-legend.component.scss  graph-legend.component.spec.ts  graph-legend.component.ts
webapp/src/app/json-predicate/: json-predicate.component.html  json-predicate.component.scss  json-predicate.component.spec.ts  json-predicate.component.ts
webapp/src/app/models/: DsLogMessage.ts  DsMessage.ts  DsNodeSetup.ts  EventStore.ts  TypeColorStore.ts
webapp/src/app/notification/: notification.component.scss  notification.component.ts
webapp/src/css/: style.css
webapp/src/themes/: _dark.scss  _light.scss  solar.scss  themes.scss
webapp/src/ts/: app.tsx  debounce.ts  eventEmitter.ts  index.tsx  main.tsx
webapp/src/ts/api/: tauriApi.ts  types.ts
webapp/src/ts/classes/: CoreSocket.ts  Event.ts  State.ts
webapp/src/ts/components/: App.tsx  Controls.tsx  EventsTable.tsx  Logs.tsx  Nodes.tsx  json.tsx  lamportDiagram.tsx  logMessage.tsx  logView.tsx  modal.tsx  popover.tsx  tooltip.tsx
webapp/src/ts/hooks/: useTauriFileDrop.ts
webapp/src/ts/rpc/: rpc.ts
webapp/src/ts/store/: store.ts
webapp/ts/: app.ts  app.tsx  colors.ts  env.ts  lamportDiagram.tsx  messageView.tsx  toolbar.tsx  tooltip.tsx
webapp/ts/api/: api.ts  tauriApi.ts  types.ts  websocketApi.ts
webapp/ts/components/: fileDropZone.tsx  lamportDiagram.tsx  logMessage.tsx  logView.tsx  messageView.tsx  modal.tsx  mousePan.tsx  toolbar.tsx
webapp/ts/rpc/: rpcRequest.d.ts
webapp/ts/store/: store.ts
(+23 files in other folders)
