[workspace]

members = [
    "dsbox-core",
    "dsbox-tauri",
    "dsbox-runners/native",
    "dsbox-runners/io-helper",
    "dsbox-runners/wasm",
    "dsbox-runners/lua",
    "libproto",
    "payload_derive",
]

resolver = "3"

default-members = ["dsbox-tauri"]

[workspace.dependencies]
# workspace memebers
dsbox-core = { path = "dsbox-core" }
dsbox-runner-io-helper = { path = "dsbox-runners/io-helper"}
dsbox-runner-native = { path = "dsbox-runners/native"}
dsbox-runner-wasm = { path = "dsbox-runners/wasm"}
dsbox-runner-lua = { path = "dsbox-runners/lua"}
libproto = { path = "libproto" }
payload_derive = { path = "payload_derive" }

# basics
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
which = "8.0.0"
enumflags2 = "0.7.12"
shlex = "1.3.0"

# async
futures = "0.3.31"
tokio = "1.48.0"

# lua/wasm
mlua = { version = "0.11.5", features = ["lua54", "async", "serialize", "vendored", "send"] }
wasmtime = { version = "39.0.1" }
wasmtime-wasi = { version = "39.0.1", features = ["p3"] }
libc = "0.2.177"

# windows support
bstr = { version = "1.12.1" }
windows = { version = "0.62.2", features = ["Win32_Globalization", "Win32_UI_Shell"] }

# tauri
tauri = { version = "2.9.3", features = [] }
tauri-build = { version = "2.5.2", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-store = "2.4.1"
tauri-plugin-window-state = "2.4.1"

# procmacro
heck = "0.5.0"
quote = "1.0.42"
syn = "2.0.111"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
