[package]
name = "dsbox-core"
version = "0.1.6"
edition = "2024"

[dependencies]
log = "0.4.28"
libproto = { path = "../libproto", features = ["system_messages"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
futures = "0.3.31"
async-channel = "2.5.0"

mlua = { version = "0.11.4", features = ["lua54", "async", "serialize", "vendored"], optional = true }

wasmtime = { version = "38.0.3", optional = true}
wasmtime-wasi = { version = "38.0.3", optional = true, features = ["p3"] }

[features]
lua = ["dep:mlua"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
default = ["lua"]