[package]
name = "dsbox-core"
version = "0.3.0"
edition = "2024"

[dependencies]
log = { workspace = true }
libproto = { workspace = true, features = ["system_messages"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
regex = { workspace = true }
enumflags2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
shlex = { workspace = true }