[package]
name = "dsbox-core"
version = "0.2.2"
edition = "2024"

[dependencies]
log = { workspace = true }
libproto = { workspace = true, features = ["system_messages"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
async-channel = { workspace = true }
rand = {workspace = true}

mlua = { workspace = true, optional = true }

wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true ,optional = true}

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, optional = true }
bstr = { workspace = true, optional = true }

[features]
lua = ["dep:mlua", "dep:windows", "dep:bstr"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
default = ["lua"]