[package]
name = "dsbox"
version = "0.1.5"
description = "Tauri frontend for `dsbox`"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.4"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2.7.1"
tokio = "1.47.2"
async-channel = "2.5.0"
dsbox-core = { path = "../dsbox-core" }
clap = { version = "4.5.51", features = ["derive"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
which = "8.0.0"

[features]
lua = ["dsbox-core/lua"]
wasm = ["dsbox-core/wasm"]
default = ["lua", "wasm"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.1"
