[package]
name = "dsbox"
version = "0.2.1"
description = "Tauri frontend for `dsbox`"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
tauri = { workspace = true }
tauri-plugin-log = { workspace = true }
tokio = { workspace = true }
async-channel = { workspace = true }
dsbox-core = { workspace = true }
clap = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-store = { workspace = true }
which = { workspace = true }

[features]
lua = ["dsbox-core/lua"]
wasm = ["dsbox-core/wasm"]
default = ["lua", "wasm"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = { workspace = true }
