[package]
name = "dsbox"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

libproto = { path = "../libproto", features = ["system_messages"] }
json_rpc_fn = { path = "../json_rpc_fn" }

serde = "1"
serde_json = "1"

log = "0.4.21"
env_logger = "0.11.3"

shlex = "1.3.0"

tokio = { version = "1.37.0", features = ["full"] }

regex = "1.10.4"
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.8.6", features = ["ws"], optional = true }
tower-http = { version = "0.6.6", features = ["trace"], optional = true }
phf = { version = "0.13.1", default-features = false, optional = true }
flate2 = { version = "1.0.28", optional = true }
mime_guess = { version = "2.0.4", optional = true }

mlua = { version = "0.11.4", features = ["lua54", "async", "serialize", "vendored"], optional = true }

wasmtime = { version = "37.0.1", optional = true }
wasmtime-wasi = { version = "37.0.1", optional = true }
wasi-common = { version = "37.0.1", features = ["tokio"], optional = true }
wiggle = { version = "37.0.1", optional = true }

[build-dependencies]
phf_codegen = { version = "0.13.1", optional = true }
flate2 = { version = "1.0.28", optional = true }
mime_guess = { version = "2.0.4", optional = true }

[features]
lua = ["dep:mlua"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wasi-common", "dep:wiggle"]
webapp = ["dep:axum", "dep:tower-http", "dep:phf", "dep:flate2", "dep:mime_guess", "dep:phf_codegen"]
embedded_webapp = ["webapp"]
default = ["lua", "wasm", "webapp"]