[package]
name = "dsbox-web"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

dsbox-core = { path = "../dsbox-core" }

serde = "1"
serde_json = "1"

log = "0.4.21"
env_logger = "0.11.3"

tokio = { version = "1.37.0", features = ["full"] }
async-channel = "2.5.0"

axum = { version = "0.8.6", features = ["ws"], optional = true }
tower-http = { version = "0.6.6", features = ["trace"], optional = true }
phf = { version = "0.13.1", default-features = false, optional = true }
flate2 = { version = "1.0.28", optional = true }
mime_guess = { version = "2.0.4", optional = true }


[build-dependencies]
phf_codegen = { version = "0.13.1", optional = true }
flate2 = { version = "1.0.28", optional = true }
mime_guess = { version = "2.0.4", optional = true }

[features]
lua = ["dsbox-core/lua"]
wasm = ["dsbox-core/wasm"]
webapp = ["dep:axum", "dep:tower-http", "dep:phf", "dep:flate2", "dep:mime_guess", "dep:phf_codegen"]
embedded_webapp = ["webapp"]
default = ["lua", "wasm", "webapp"]