[package]
name = "dsbox-web"
version = "0.1.6"
edition = "2024"
build = "build/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {workspace = true }

dsbox-core = {workspace = true }

serde = {workspace = true }
serde_json = {workspace = true }

log = {workspace = true }
env_logger = {workspace = true }

tokio = {workspace = true, features = ["full"] }
async-channel = {workspace = true }

axum = {workspace = true, optional = true}
tower-http = {workspace = true, optional = true }
phf = {workspace = true, optional = true }
flate2 = {workspace = true, optional = true }
mime_guess = {workspace = true, optional = true }


[build-dependencies]
phf_codegen = {workspace = true, optional = true }
flate2 = {workspace = true, optional = true }
mime_guess = {workspace = true, optional = true }

[features]
lua = ["dsbox-core/lua"]
wasm = ["dsbox-core/wasm"]
webapp = ["dep:axum", "dep:tower-http", "dep:phf", "dep:flate2", "dep:mime_guess", "dep:phf_codegen"]
embedded_webapp = ["webapp"]
default = ["lua", "webapp"]