[package]
name = "libproto"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
payload_derive = { path = "../payload_derive" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", optional = true, features = ["serde"] }

[features]
system_messages = ["dep:chrono"]
default = []
