cargo-features = ["per-package-target"]

[package]
name = "echo_server"
version = "0.1.0"
edition = "2021"
default-target = "wasm32-wasi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libproto = { path = "../../libproto", features=["system_messages"] }